# FlowKit

./: .gitignore  LICENSE  Readme.md  req.txt
docs/: flowkit-docs.md  how-setup.md
painpoints/: Readme.md
src/FlowKitControlUint/: .env  main.py
src/FlowKitControlUint/controlunit/: config.py  fcb_queue.py
src/FlowKitControlUint/controlunit/fcb/: flow.py  flow_control_block.py  node.py
src/FlowTraceMonitor/: .env  main.py
src/NodeProcessUnit/: .env  main.py  readme  v-req.txt
src/NodeProcessUnit/Lib/FlowKit/: pyproject.toml  readme
src/NodeProcessUnit/Lib/FlowKit/flowkit/: __init__.py  log.py  node.py  npu_control.py
src/NodeProcessUnit/Lib/FlowKit/flowkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NodeProcessUnit/Lib/FlowKit/test/: run_src.bat  test.py  test_run.py
src/NodeRunner/: .env  main.py
src/NodeRunner/node_runner/: config.py  log.py  redis_connection.py
src/NodeRunner/node_runner/npu/: __init__.py
src/NodeRunner/node_runner/npu_manager/: schduler.py  session.py
src/NodeRunner/node_runner/router/: __init__.py  node_route.py  npu_route.py
src/NodeRunner/node_runner/task_manager/: manager.py  node.py
src/SecretManager/: main.py
src/flowkit-ui/: .env  package-lock.json  package.json
src/flowkit-ui/src/app/: page.js
src/flowkit-ui/src/app/dashboard/: page.js
src/flowkit-ui/src/app/kv/: page.js
src/flowkit-ui/src/app/resource/: page.js
src/flowkit-ui/src/components/: Hero.jsx
test/: flow.json  flow_runner_test.py  hell_know_what.py  node_runner_load_test.py  node_runner_test.py
(+7 files in other folders)
